--- a/selinux.cabal
+++ b/selinux.cabal
@@ -1,14 +1,19 @@
 Name:                selinux
 Version:             0.1
 Synopsis:            SELinux bindings
+Description:         Haskell bindings for the SELinux API
 License:             BSD3
 License-file:        LICENSE
 Author:              Luite Stegeman
 Maintainer:          stegeman@gmail.com
 Category:            System
 Build-type:          Simple
+Homepage:            https://github.com/luite/selinux
 Cabal-version:       >=1.2
 
+Source-repository head
+  type:     git
+  location: https://luite@github.com/luite/selinux.git
 
 Library
   hs-source-dirs: src
